--- a/example/index.html
+++ b/example/index.html
@@ -21,8 +21,8 @@
       </header>
 
       <h1>SPOTIFY WRAPPER PLAYER</h1>
-      <form class="form-wrapper">
-        <input class="form-input" type="text" name="query" placeholder="Type an artist/album" autocomplete="off">
+      <form id="search-form" class="form-wrapper">
+        <input id="search-input" class="form-input" type="text" name="query" placeholder="Artista/Album" autocomplete="off">
         <svg class="form-icon" viewBox="0 0 27 28" xmlns="http://www.w3.org/2000/svg">
           <title>Search</title>
           <path
